---
source: src/context.rs
expression: request_ctx
---
Context(
  own: {
    "CTX_LISTENER_NAME": "TEST-LISTENER-1.2.3.4:1234",
    "CTX_REQUEST_HEADERS_X_SOME_HEADER": "some header value",
    "CTX_REQUEST_HOST": "www.google.com",
    "CTX_REQUEST_METHOD": "POST",
    "CTX_REQUEST_PATH": "test-path",
    "CTX_REQUEST_QUERY": "query=some-query",
    "CTX_REQUEST_SOURCE_IP": "4.3.2.1",
  },
  parent: Some(Context(
    own: {
      "CTX_APP_NAME": "http-dragonfly",
      "CTX_APP_VERSION": "0.5.1",
      "TEST_ENV_HEADER_TO_ADD": "TEST_ENV_HEADER_VALUE",
      "TEST_ENV_KEY": "TEST_ENV_VALUE",
    },
    parent: None,
  )),
)
